--- a/static/netlify.toml
+++ b/static/netlify.toml
@@ -6,7 +6,7 @@
   HUGO_VERSION = "0.92.1"
 
 [[headers]]
-  for = "/*.(jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|webp|mp3|mp4|ogg|ogv|webm|htc|css|ttf|ttc|otf|eot|woff|woff2)"
+  for = "/*.(js|jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|webp|mp3|mp4|ogg|ogv|webm|htc|css|ttf|ttc|otf|eot|woff|woff2)"
 [headers.values]
   Cache-Control = "public, max-age=31536000, s-maxage=31536000, immutable" 
 
