--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,10 @@
 baseURL = 'https://2r2.netlify.app/'
 languageCode = 'ms'
 title = '2r2'
-
+googleAnalytics = 'G-4W81EYMJLL'
 disableHugoGeneratorInject = true
 
+[taxonomies]
+  tag = "tags"
+  category = "categories"
+  author = "authors"
