--- a/netlify.toml
+++ b/netlify.toml
@@ -5,10 +5,25 @@
 [build.environment]
   HUGO_VERSION = "0.92.1"
 
+[[redirects]]
+  from = "/imguruploads/*"
+  to = "https://i.imgur.com/:splat"
+  status = 200
+  force = true
+  headers = {Cache-Control = "public, max-age=31536000, s-maxage=31536000, immutable"}
+
+[[redirects]]
+  from = "/imgbb/*"
+  to = "https://i.ibb.co/:splat"
+  status = 200
+  force = true
+  headers = {Cache-Control = "public, max-age=31536000, s-maxage=31536000, immutable"}
+
 [[headers]]
-  for = "/*.(js|jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|webp|mp3|mp4|ogg|ogv|webm|htc|css|ttf|ttc|otf|eot|woff|woff2)"
+  for = "/*.(js|jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|webp|mp3|mp4|ogg|ogv|webm|htc|css|ttf|ttc|otf|eot|woff|woff2|webmanifest)"
 [headers.values]
-  Cache-Control = "public, max-age=31536000, s-maxage=31536000, immutable" 
+  Cache-Control = "public, max-age=31536000, s-maxage=31536000, immutable"
+  Access-Control-Allow-Origin = "*"
 
 [[headers]]
   for = "/*"
